cleared some bugs
