# pkg/api/handlers/category.go
@@ -2,9 +2,9 @@ package handlers
 
 import (
 	"net/http"
+
 	// "strconv"
 
-	
 	services "github.com/Anandhu4456/go-Ecommerce/pkg/usecase/interfaces"
 	"github.com/Anandhu4456/go-Ecommerce/pkg/utils/models"
 	"github.com/Anandhu4456/go-Ecommerce/pkg/utils/response"
@@ -34,13 +34,15 @@ func NewCategoryHandler(categoryUsecase services.CategoryUsecase) *CategoryHandl
 // @Failure		500	{object}	response.Response{}
 // @Router			/admin/category/add [post]
 func (catH *CategoryHandler) AddCategory(c *gin.Context) {
-	// cat := c.Query("category")
-	var cat string
-	if err:=c.BindJSON(&cat);err!=nil{
-		errRes:=response.ClientResponse(http.StatusBadRequest,"fileds provided are in wrong format",nil,err.Error())
-		c.JSON(http.StatusBadRequest,errRes)
-		return
-	}
+	cat := c.Query("category")
+	// var cat domain.Category
+
+	// if err := c.BindJSON(&cat); err != nil {
+	// 	fmt.Println("error from cat handler ", err)
+	// 	errRes := response.ClientResponse(http.StatusBadRequest, "fields provided are in wrong format", nil, err.Error())
+	// 	c.JSON(http.StatusBadRequest, errRes)
+	// 	return
+	// }
 	categoryRes, err := catH.CategoryUsecase.AddCategory(cat)
 	if err != nil {
 		errRes := response.ClientResponse(http.StatusBadRequest, "Couldn't add category", nil, err.Error())
@@ -49,7 +51,7 @@ func (catH *CategoryHandler) AddCategory(c *gin.Context) {
 	}
 	successRes := response.ClientResponse(http.StatusOK, "Category added successfully", categoryRes, nil)
 	c.JSON(http.StatusOK, successRes)
-	
+
 }
 
 // @Summary		Update Category
@@ -103,15 +105,6 @@ func (catH *CategoryHandler) DeleteCategory(c *gin.Context) {
 	c.JSON(http.StatusOK, successRes)
 }
 
-// @Summary		List Categories
-// @Description	Admin can view the list of  Categories
-// @Tags			Admin
-// @Accept			json
-// @Produce		    json
-// @Security		Bearer
-// @Success		200	{object}	response.Response{}
-// @Failure		500	{object}	response.Response{}
-// @Router			/admin/category [get]
 func (catH *CategoryHandler) Categories(c *gin.Context) {
 
 	categories, err := catH.CategoryUsecase.GetCategories()
