# pkg/api/middleware/auth.go
@@ -5,7 +5,6 @@ import (
 	"strings"
 
 	"github.com/golang-jwt/jwt"
-	"github.com/spf13/viper"
 
 	"github.com/gin-gonic/gin"
 )
@@ -13,28 +12,58 @@ import (
 // middleware for admin authentication
 
 func AdminAuthMiddleware(c *gin.Context) {
-	token := c.Request.Header.Get("Authorization")
-	token = strings.TrimPrefix(token, "Bearer")
-
-	_, err := jwt.Parse(token, func(t *jwt.Token) (interface{}, error) {
-		return []byte("accesssecret"), nil
-	})
-	if err != nil {
-		fmt.Println("error in admin auth")
+	token,err:=c.Cookie("Authorization")
+	fmt.Println("first token: ",token)
+	if err!=nil{
 		c.AbortWithStatus(401)
 		return
 	}
+	
+
+	// fmt.Println("token: ",token)
+	token = strings.TrimPrefix(token, "Bearer ")
+
+	// fmt.Println("in middleware: ", token)
+
+	jwtToken, err := ValidateToken(token)
+	fmt.Println("token after validation ",jwtToken)
+	if err != nil {
+		c.AbortWithStatus(401)
+		return
+	}
+	if err != nil || !jwtToken.Valid {
+		c.JSON(401, gin.H{"error": err})
+		c.Abort()
+		return
+	}
+
+	claims, ok := jwtToken.Claims.(jwt.MapClaims)
+	if !ok || !jwtToken.Valid {
+		c.JSON(401, gin.H{"error": err})
+		c.Abort()
+		return
+	}
+
+	role, ok := claims["role"].(string)
+	if !ok || role != "admin" {
+		c.JSON(401, gin.H{"error": err})
+		c.Abort()
+		return
+	}
+	fmt.Println("admin auth is fine")
 	c.Next()
 }
 
-func validateToken(token string) (*jwt.Token, error) {
+func ValidateToken(token string) (*jwt.Token, error) {
 	fmt.Println("token validating...")
 	jwtToken, err := jwt.Parse(token, func(t *jwt.Token) (interface{}, error) {
+		fmt.Println("signature: ", t.Signature)
 		if _, ok := t.Method.(*jwt.SigningMethodHMAC); !ok {
 			return nil, fmt.Errorf("unexpected signing method:%v", t.Header["alg"])
+
 		}
-		secret := viper.GetString("KEY")
-		return []byte(secret), nil
+		
+		return []byte("adminsecret"), nil
 	})
 	return jwtToken, err
 }
